📚 Auto-update: News data refreshed - 2025-12-23 06:19 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26454,5 +26454,77 @@
         "published": "Tue, 23 Dec 2025 04:33:39 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"From SIPs To Smart Portfolios: India\u2019s Wealthtech Playbook For 2026\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-39.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s wealthtech ecosystem has grown rapidly over the past decade, particularly in mutual fund SIPs, equity investments, and F&#38;O trading.\u00a0&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/tempur-pedic-promo-code/",
+        "title": "30% Off Tempur-Pedic Promo Codes | December 2025",
+        "link": "https://www.wired.com/story/tempur-pedic-promo-code/",
+        "published": "Tue, 23 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Whether you\u2019re looking to upgrade your mattress or swap out your bedding, browse our Tempur-Pedic coupons for up to $300 off and the best sleep of your life."
+    },
+    {
+        "id": "https://www.wired.com/story/naturepedic-promo-code/",
+        "title": "Naturepedic Promo Codes and Deals: 20% Off",
+        "link": "https://www.wired.com/story/naturepedic-promo-code/",
+        "published": "Tue, 23 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on Naturepedic\u2019s line of organic, thoughtfully crafted mattresses and bedding with our coupon codes for this month."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/us-bans-new-foreign-made-drones-and-components-053201854.html?src=rss",
+        "title": "US bans new foreign-made drones and components",
+        "link": "https://www.engadget.com/big-tech/us-bans-new-foreign-made-drones-and-components-053201854.html?src=rss",
+        "published": "Tue, 23 Dec 2025 05:32:01 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Federal Communications Commission has added foreign-made drones and their critical components to the agency\u2019s \u201c<a class=\"link\" href=\"https://www.engadget.com/mobile/smartphones/the-fcc-is-investigating-whether-huawei-other-chinese-companies-are-evading-us-ban-150002185.html\" target=\"_blank\">Covered List</a>,\u201d making them prohibited to import into the US. In a <a class=\"link\" href=\"https://docs.fcc.gov/public/attachments/DA-25-1086A1.pdf\" target=\"_blank\">public notice</a> published by the "
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/brainbees-solutions-unit-swara-baby-to-buy-ka-enterprises/articleshow/126134700.cms",
+        "title": "Brainbees Solutions unit Swara Baby to buy KA Enterprises",
+        "link": "https://economictimes.indiatimes.com/tech/startups/brainbees-solutions-unit-swara-baby-to-buy-ka-enterprises/articleshow/126134700.cms",
+        "published": "Tue, 23 Dec 2025 11:26:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Brainbees Solutions Says Unit Swara Baby To Buy 100%BRIEF-Brainbees Solutions Says Unit Swara Baby To Buy 100% Stake In K.A. Enterprises"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-rolls-out-year-in-review-feature-for-select-users-mirroring-spotifys-wrapped-and-youtubes-recap/articleshow/126134458.cms",
+        "title": "OpenAI rolls out Year in Review feature for select users, mirroring Spotify\u2019s Wrapped and YouTube\u2019s Recap",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-rolls-out-year-in-review-feature-for-select-users-mirroring-spotifys-wrapped-and-youtubes-recap/articleshow/126134458.cms",
+        "published": "Tue, 23 Dec 2025 11:11:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "OpenAI has introduced 'Your Year with ChatGPT', an annual recap designed to showcase users' unique interactions with ChatGPT over the year as well as assign personalised awards  for their engagement."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/hclsoftware-to-acquire-business-intelligence-platform-jaspersoft-for-240-million/articleshow/126134367.cms",
+        "title": "HCLSoftware to acquire business intelligence platform Jaspersoft for $240 million",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/hclsoftware-to-acquire-business-intelligence-platform-jaspersoft-for-240-million/articleshow/126134367.cms",
+        "published": "Tue, 23 Dec 2025 11:06:18 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "HCLSoftware is set to acquire Jaspersoft for a hefty sum of $240 million. With this acquisition, HCLSoftware will welcome 115 new team members into its fold. This expansion aims to significantly strengthen HCLSoftware's offerings in data and artificial intelligence."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/us-visa-curbs-ai-surge-shape-cautious-outlook-for-indian-it-in-2026/articleshow/126134094.cms",
+        "title": "US visa curbs, AI surge shape cautious outlook for Indian IT in 2026",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/us-visa-curbs-ai-surge-shape-cautious-outlook-for-indian-it-in-2026/articleshow/126134094.cms",
+        "published": "Tue, 23 Dec 2025 10:45:59 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "As India\u2019s IT sector, valued at $280 billion, navigates its way toward 2026, it faces significant challenges such as stringent visa regulations and mounting global trade pressures. In response, businesses are pouring resources into artificial intelligence and developing global capability centers to enhance their international presence."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/the-pentagon-and-ai-giants-have-a-weakness-both-need-chinas-batteries-badly-/articleshow/126134056.cms",
+        "title": "The Pentagon and AI giants have a weakness. Both need China's batteries, badly.",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/the-pentagon-and-ai-giants-have-a-weakness-both-need-chinas-batteries-badly-/articleshow/126134056.cms",
+        "published": "Tue, 23 Dec 2025 10:42:22 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "As the United States revs up its artificial intelligence sector and military capabilities, a concerning dependency on Chinese-made batteries emerges. This reliance threatens national security, prompting the government to shift focus toward bolstering local battery manufacturing."
+    },
+    {
+        "id": "https://inc42.com/buzz/prosperr-io-raises-4-mn-to-simplify-tax-management/",
+        "title": "Prosperr.io Raises $4 Mn To Simplify Tax Management",
+        "link": "https://inc42.com/buzz/prosperr-io-raises-4-mn-to-simplify-tax-management/",
+        "published": "Tue, 23 Dec 2025 05:49:10 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Prosperr.io Raises $4 Mn To Simplify Tax Management\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-73.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fintech SaaS startup Prosperr.io has raised $4 Mn (around INR 36 Cr) in its seed funding round led by Jungle&#8230;"
     }
 ]
