📚 Auto-update: News data refreshed - 2025-12-23 07:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26526,5 +26526,37 @@
         "published": "Tue, 23 Dec 2025 05:49:10 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Prosperr.io Raises $4 Mn To Simplify Tax Management\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-73.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fintech SaaS startup Prosperr.io has raised $4 Mn (around INR 36 Cr) in its seed funding round led by Jungle&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/groupon-promo-code/",
+        "title": "Groupon Promo Codes: 50% Off in January 2026",
+        "link": "https://www.wired.com/story/groupon-promo-code/",
+        "published": "Tue, 23 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Unlock up to 50% off, 40% off packages, and 25% off with top Groupon coupon codes. Explore coupons to save extra on travel getaways, holiday gifts, spa days, and event tickets."
+    },
+    {
+        "id": "https://github.com/eyeblech/cinecli",
+        "title": "Show HN: CineCLI \u2013 Browse and torrent movies directly from your terminal",
+        "link": "https://github.com/eyeblech/cinecli",
+        "published": "Tue, 23 Dec 2025 05:17:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46362655\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/hclsoftware-set-to-buy-agentic-ai-firm-wobby-for-5-3-million/articleshow/126135963.cms",
+        "title": "HCLSoftware set to buy agentic AI firm Wobby for $5.3 million",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/hclsoftware-set-to-buy-agentic-ai-firm-wobby-for-5-3-million/articleshow/126135963.cms",
+        "published": "Tue, 23 Dec 2025 12:37:47 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "HCLSoftware plans to buy Wobby, an AI data analyst startup, for \u20ac4.5 million. This move aims to boost HCLSoftware's data and AI offerings. Wobby's technology will allow customers to query data using natural language. The deal is expected to finalize by February 2026. This marks HCLTech's third acquisition this year."
+    },
+    {
+        "id": "https://inc42.com/buzz/paynearby-gets-tpap-licence-to-offer-upi-payments/",
+        "title": "PayNearby Gets TPAP Licence To Offer UPI Payments",
+        "link": "https://inc42.com/buzz/paynearby-gets-tpap-licence-to-offer-upi-payments/",
+        "published": "Tue, 23 Dec 2025 06:59:17 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"PayNearby Gets TPAP Licence To Offer UPI Payments\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/08/PayNearby.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fintech startup PayNearby has received a third-party application provider (TPAP) licence from the National Payments Corporation of India (NPCI) to&#8230;"
     }
 ]
