--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26558,5 +26558,61 @@
         "published": "Tue, 23 Dec 2025 06:59:17 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"PayNearby Gets TPAP Licence To Offer UPI Payments\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/08/PayNearby.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fintech startup PayNearby has received a third-party application provider (TPAP) licence from the National Payments Corporation of India (NPCI) to&#8230;"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/best-nintendo-switch-2-accessories-070011952.html?src=rss",
+        "title": "The best Nintendo Switch 2 accessories for 2026",
+        "link": "https://www.engadget.com/gaming/nintendo/best-nintendo-switch-2-accessories-070011952.html?src=rss",
+        "published": "Tue, 23 Dec 2025 08:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Whether you just got a Switch 2 or you've had yours for a while, you may want to grab some key accessories to make it fit your gaming style even more than it already does. Not only can the right accessories make it easier and more fun to play all of the games you love, but they can also make your gaming experience better in different environments, be it on the couch, in an airplane or in the car. We've got to try out some of the latest Switch 2 accessories, and some of our old favorites are a"
+    },
+    {
+        "id": "https://x86.lol/generic/2025/12/19/polyglot.html",
+        "title": "The Polyglot NixOS",
+        "link": "https://x86.lol/generic/2025/12/19/polyglot.html",
+        "published": "Sat, 20 Dec 2025 07:39:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46334297\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/using-ai-for-work-tips/",
+        "title": "3 ways anyone can start using AI at work today - safely",
+        "link": "https://www.zdnet.com/article/using-ai-for-work-tips/",
+        "published": "Tue, 23 Dec 2025 08:00:41 GMT",
+        "source": "Latest news",
+        "summary": "Knowing how to harness the right AI tools for your particular role can be a big professional boon, but only if you do so carefully."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/firstcry-parent-to-extend-hygiene-play-with-ka-enterprises-acquisition/articleshow/126134700.cms",
+        "title": "Firstcry parent to extend hygiene play with KA Enterprises acquisition",
+        "link": "https://economictimes.indiatimes.com/tech/startups/firstcry-parent-to-extend-hygiene-play-with-ka-enterprises-acquisition/articleshow/126134700.cms",
+        "published": "Tue, 23 Dec 2025 11:26:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "FirstCry's parent company is expanding its hygiene offerings. A subsidiary will acquire KA Hygiene for Rs 57.74 crore. This move aims to strengthen FirstCry's position in the hygiene market. The deal is expected to conclude by December 31, 2025. FirstCry is also focusing on product strategy to improve margins and customer reach."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/unlock-your-startup-dreams-with-spotifys-new-learning-led-podcast-experience",
+        "title": "Unlock your startup dreams with Spotify\u2019s new learning-led podcast experience",
+        "link": "https://yourstory.com/2025/12/unlock-your-startup-dreams-with-spotifys-new-learning-led-podcast-experience",
+        "published": "Tue, 23 Dec 2025 06:57:15 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "STRAPLINE: Spotify Unlock brings curated learning playlists, credible voices, and real-world community experiences together to help India\u2019s serious podcast listeners build skills, confidence, and entrepreneurial momentum.\n\nGayatri Guha\n\nPodcasting in India has rapidly evolved from a niche medium t"
+    },
+    {
+        "id": "https://inc42.com/features/25-indian-startups-shut-down-in-2025/",
+        "title": "From Burn To Breakdown: 25 Startups That Shut Down In 2025",
+        "link": "https://inc42.com/features/25-indian-startups-shut-down-in-2025/",
+        "published": "Tue, 23 Dec 2025 07:23:38 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"25 Startups That Shut Down In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/YIR-Shutdowns-in-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The year 2025 proved to be an exceptionally dynamic one for the Indian startup ecosystem. Despite the surge in the&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-shaping-choices-empowering-india-info-edge-ad/",
+        "title": "Shaping Choices. Empowering India. The Info Edge Story #Ad",
+        "link": "https://www.medianama.com/2025/12/223-shaping-choices-empowering-india-info-edge-ad/",
+        "published": "Tue, 23 Dec 2025 07:30:43 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Read on to learn more about Info Edge, which has built some of India's most iconic consumer internet brands like 99acres.com and Naukri.com, etc.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-shaping-choices-empowering-india-info-edge-ad/\">Shaping Choices. Empowering India. The Info Edge Story #Ad</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
