📚 Auto-update: News data refreshed - 2025-12-23 09:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26614,5 +26614,37 @@
         "published": "Tue, 23 Dec 2025 07:30:43 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Read on to learn more about Info Edge, which has built some of India's most iconic consumer internet brands like 99acres.com and Naukri.com, etc.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-shaping-choices-empowering-india-info-edge-ad/\">Shaping Choices. Empowering India. The Info Edge Story #Ad</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lubuntu-versus-xubuntu/",
+        "title": "Lubuntu vs. Xubuntu: Which Ubuntu flavor is right for you - my expert advice",
+        "link": "https://www.zdnet.com/article/lubuntu-versus-xubuntu/",
+        "published": "Tue, 23 Dec 2025 09:00:46 GMT",
+        "source": "Latest news",
+        "summary": "Two Ubuntu-based distributions that have the same goal, but which is the one best-suited for your needs?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/klh-model-3-speakers-review/",
+        "title": "These vintage-style bookshelf speakers are the last ones I'll ever buy, here's why",
+        "link": "https://www.zdnet.com/article/klh-model-3-speakers-review/",
+        "published": "Tue, 23 Dec 2025 08:35:45 GMT",
+        "source": "Latest news",
+        "summary": "The KLK Model 3 loudspeaker is a throwback to the past, giving audiophile-grade clarity to everything you listen to."
+    },
+    {
+        "id": "https://inc42.com/buzz/exclusive-yellow-ai-lays-off-over-100-employees-amid-automation-push/",
+        "title": "Exclusive: Yellow.ai Lays Off Over 100 Employees Amid Automation Push",
+        "link": "https://inc42.com/buzz/exclusive-yellow-ai-lays-off-over-100-employees-amid-automation-push/",
+        "published": "Tue, 23 Dec 2025 08:58:09 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-7.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Conversational AI startup Yellow.ai has laid off more than 100 employees over the past few weeks amid rising automation, sources&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/tonbo-imaging-files-drhp-for-ofs-only-ipo/",
+        "title": "Tonbo Imaging Files DRHP For OFS-Only IPO",
+        "link": "https://inc42.com/buzz/tonbo-imaging-files-drhp-for-ofs-only-ipo/",
+        "published": "Tue, 23 Dec 2025 08:23:43 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Tonbo Imaging Files DRHP For OFS-Only IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Tonbo-FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Defence tech startup Tonbo Imaging has filed a DRHP with the Securities and Exchange Board of India (SEBI) for its&#8230;"
     }
 ]
