--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26646,5 +26646,109 @@
         "published": "Tue, 23 Dec 2025 08:23:43 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Tonbo Imaging Files DRHP For OFS-Only IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Tonbo-FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Defence tech startup Tonbo Imaging has filed a DRHP with the Securities and Exchange Board of India (SEBI) for its&#8230;"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-ssds-140014262.html?src=rss",
+        "title": "The best SSDs in 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-ssds-140014262.html?src=rss",
+        "published": "Tue, 23 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Upgrading to a good SSD can make your computer feel brand new again. Apps open faster, files move in a blink and even older machines start to feel a lot more responsive. It is one of the easiest ways to breathe life into a laptop or desktop without replacing the whole system, and the performance boost is something you notice right away.<br /><br />There are plenty of SSDs to choose from, though, and the naming alone can be confusing if you are not already familiar with the specs. Some drives "
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/23/1130393/how-social-media-encourages-the-worst-of-ai-boosterism/",
+        "title": "How social media encourages the worst of AI boosterism",
+        "link": "https://www.technologyreview.com/2025/12/23/1130393/how-social-media-encourages-the-worst-of-ai-boosterism/",
+        "published": "Tue, 23 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Demis Hassabis, CEO of Google DeepMind, summed it up in three words: \u201cThis is embarrassing.\u201d&#160;&#160; Hassabis was replying on X to an overexcited post by S\u00e9bastien Bubeck, a research scientist at the rival firm OpenAI, announcing that two mathematicians had used OpenAI\u2019s latest large language model, GPT-5, to find solutions to 10 unsolved problems in&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/23/1130396/how-i-learned-to-stop-worrying-and-love-ai-slop/",
+        "title": "How I learned to stop worrying and love AI slop",
+        "link": "https://www.technologyreview.com/2025/12/23/1130396/how-i-learned-to-stop-worrying-and-love-ai-slop/",
+        "published": "Tue, 23 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Lately, everywhere I scroll, I keep seeing the same fish-eyed CCTV view: a grainy wide shot from the corner of a living room, a driveway at night, an empty grocery store. Then something impossible happens. JD Vance shows up at the doorstep in a crazy outfit. A car folds into itself like paper and drives&#8230;"
+    },
+    {
+        "id": "https://computerhistory.org/blog/adobe-photoshop-source-code/",
+        "title": "Adobe Photoshop 1.0 Source Code (2013)",
+        "link": "https://computerhistory.org/blog/adobe-photoshop-source-code/",
+        "published": "Thu, 18 Dec 2025 15:37:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46313962\">Comments</a>"
+    },
+    {
+        "id": "https://carnap.io/",
+        "title": "Carnap \u2013 A formal logic framework for Haskell",
+        "link": "https://carnap.io/",
+        "published": "Tue, 23 Dec 2025 09:17:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46363751\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-laptop-docking-station/",
+        "title": "I tested the best laptop docking stations - here's what I recommend for your office setup",
+        "link": "https://www.zdnet.com/article/best-laptop-docking-station/",
+        "published": "Tue, 23 Dec 2025 10:00:51 GMT",
+        "source": "Latest news",
+        "summary": "Organize your workspace with our top picks for the best laptop docking stations available now."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/call-of-duty-co-creator-vince-zampella-dies-in-california-ferrari-crash-what-we-know-so-far/articleshow/126138614.cms",
+        "title": "Call of Duty co-creator Vince Zampella dies in California Ferrari crash: What we know so far",
+        "link": "https://economictimes.indiatimes.com/tech/technology/call-of-duty-co-creator-vince-zampella-dies-in-california-ferrari-crash-what-we-know-so-far/articleshow/126138614.cms",
+        "published": "Tue, 23 Dec 2025 15:14:26 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Vince Zampella, co-creator of Call of Duty, has died aged 55 in a car crash in Los Angeles. He co-founded Infinity Ward and Respawn Entertainment, shaping major games like Modern Warfare, Titanfall and Apex Legends, and was fired from Activision in 2010 over contract disputes. Zampella is survived by three children from his marriage to Brigitte Zampella."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/amazons-zoox-to-recall-332-us-vehicles-over-software-error-nhtsa-says/articleshow/126137846.cms",
+        "title": "Amazon's Zoox to recall 332 US vehicles over software error, NHTSA says",
+        "link": "https://economictimes.indiatimes.com/tech/technology/amazons-zoox-to-recall-332-us-vehicles-over-software-error-nhtsa-says/articleshow/126137846.cms",
+        "published": "Tue, 23 Dec 2025 14:23:53 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Amazon\u2019s self-driving unit Zoox is recalling 332 vehicles in the U.S. due to a software fault in its automated driving system. The glitch could cause cars to cross the yellow line or stop in front of oncoming traffic at intersections. Zoox is providing a free software update to fix the issue."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/ola-electric-hyperservice-centres-day-service",
+        "title": "Ola Electric launches Hyperservice Centres with same-day service",
+        "link": "https://yourstory.com/2025/12/ola-electric-hyperservice-centres-day-service",
+        "published": "Tue, 23 Dec 2025 08:34:40 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "EV maker Ola Electric's first Hyperservice Centre is now operational in Indiranagar, Bengaluru, with plans to upgrade its service centres pan-India in the coming weeks."
+    },
+    {
+        "id": "https://inc42.com/buzz/oyo-parent-prism-to-raise-inr-6650-cr-via-ipo/",
+        "title": "[Update] OYO Parent PRISM Gets Shareholders\u2019 Nod For INR 6,650 Cr IPO",
+        "link": "https://inc42.com/buzz/oyo-parent-prism-to-raise-inr-6650-cr-via-ipo/",
+        "published": "Tue, 23 Dec 2025 09:52:19 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Through The IPO PRISM: Is OYO Ready For The Spotlight?\u00a0\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/09/Oyo-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />[Update] December 23, 15:15 IST PRISM, the parent of hospitality unicorn OYO, has received the approval from its shareholders to&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/nclt-clears-merger-of-amazon-indias-logistics-and-marketplace-arms/",
+        "title": "NCLT Clears Merger of Amazon India\u2019s Logistics & Marketplace Arms",
+        "link": "https://inc42.com/buzz/nclt-clears-merger-of-amazon-indias-logistics-and-marketplace-arms/",
+        "published": "Tue, 23 Dec 2025 09:21:18 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"NCLT Clears Merger of Amazon India\u2019s Logistics and Marketplace Arms\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/amazon-exports-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The Bengaluru bench of National Company Law Tribunal (NCLT) has approved the merger of Amazon India\u2019s logistics and transport arm&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-meta-pay-wall-urls-facebook-posts-verified-subscribers/",
+        "title": "Meta Tests Pay\u2011Wall on URLs in Facebook Posts: What Does It Mean for Creators & Businesses?",
+        "link": "https://www.medianama.com/2025/12/223-meta-pay-wall-urls-facebook-posts-verified-subscribers/",
+        "published": "Tue, 23 Dec 2025 09:44:19 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Meta said that \"this is a limited test to understand whether the ability to publish a volume of posts with links adds value for Meta verified subscribers,\" and it excludes news outlets. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-meta-pay-wall-urls-facebook-posts-verified-subscribers/\">Meta Tests Pay\u2011Wall on URLs in Facebook Posts: What Does It Mean for Creators &amp; Businesses?</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-openai-users-chatgpts-tone-concerns-ai-models-emotional-intelligence/",
+        "title": "OpenAI Lets Users Adjust ChatGPT\u2019s Tone, But Concerns Around AI Models\u2019 Emotional Intelligence Remain",
+        "link": "https://www.medianama.com/2025/12/223-openai-users-chatgpts-tone-concerns-ai-models-emotional-intelligence/",
+        "published": "Tue, 23 Dec 2025 09:24:28 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>OpenAI has rolled out new controls in ChatGPT that let users adjust the AI model's conversational tone. But will this update prove useful or lead to more problems than solutions?</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-openai-users-chatgpts-tone-concerns-ai-models-emotional-intelligence/\">OpenAI Lets Users Adjust ChatGPT\u2019s Tone, But Concerns Around AI Models&#8217; Emotional Intelligence Remain</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
