--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26750,5 +26750,101 @@
         "published": "Tue, 23 Dec 2025 09:24:28 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>OpenAI has rolled out new controls in ChatGPT that let users adjust the AI model's conversational tone. But will this update prove useful or lead to more problems than solutions?</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-openai-users-chatgpts-tone-concerns-ai-models-emotional-intelligence/\">OpenAI Lets Users Adjust ChatGPT\u2019s Tone, But Concerns Around AI Models&#8217; Emotional Intelligence Remain</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/848916/dometic-recon-360-water-pump-review",
+        "title": "Dometic makes a better portable water faucet",
+        "link": "https://www.theverge.com/tech/848916/dometic-recon-360-water-pump-review",
+        "published": "2025-12-23T05:44:07-05:00",
+        "source": "The Verge",
+        "summary": "As a reluctant doomsday prepper and eager vanlifer, Dometic's battery-powered Go Faucet has, for the last few years, played a central role in my bougie bug-out kit and my camping rig's water system. So it took me all of two minutes with Dometic's new Recon 360 Faucet to realize it's an upgrade in every single [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-chinese-scammer-crypto-markets/",
+        "title": "Chinese Crypto Scammers on Telegram Are Fueling the Biggest Darknet Markets Ever",
+        "link": "https://www.wired.com/story/expired-tired-wired-chinese-scammer-crypto-markets/",
+        "published": "Tue, 23 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Online black markets once lurked in the shadows of the dark web. Today, they\u2019ve moved onto public platforms like Telegram\u2014and are racking up historic illicit fortunes."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-doge/",
+        "title": "Big Balls Was Just the Beginning",
+        "link": "https://www.wired.com/story/expired-tired-wired-doge/",
+        "published": "Tue, 23 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "DOGE dominated the news this year as Elon Musk\u2019s operatives shook up several US government agencies. It\u2019s far from over."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-indoor-gardening-systems/",
+        "title": "Best Indoor Garden Systems: We've Been Testing All Year (2026)",
+        "link": "https://www.wired.com/gallery/best-indoor-gardening-systems/",
+        "published": "Tue, 23 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Grow a backyard\u2019s worth of greens and vegetables in your house with a vertical hydroponic garden. Here are a few that might be worth the investment."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-housewarming-gifts-for-any-new-home-2025/",
+        "title": "16 Best Housewarming Gifts We Can't Stop Using (2025): Coasters, Blenders, Sheets",
+        "link": "https://www.wired.com/gallery/best-housewarming-gifts-for-any-new-home-2025/",
+        "published": "Tue, 23 Dec 2025 10:26:00 +0000",
+        "source": "WIRED",
+        "summary": "Make a house into a home with these gifts, whether your recipient is moving into their first house or a great new apartment."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-linux-vpns/",
+        "title": "The best Linux VPNs of 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-linux-vpns/",
+        "published": "Tue, 23 Dec 2025 11:00:40 GMT",
+        "source": "Latest news",
+        "summary": "We tested the top Linux VPNs with easy-to-use apps that feature a graphical user interface to keep your browsing safe."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/whatsapp-complains-about-restrictions-in-russia-after-reported-slowdown/articleshow/126140063.cms",
+        "title": "WhatsApp complains about restrictions in Russia after reported slowdown",
+        "link": "https://economictimes.indiatimes.com/tech/technology/whatsapp-complains-about-restrictions-in-russia-after-reported-slowdown/articleshow/126140063.cms",
+        "published": "Tue, 23 Dec 2025 16:26:22 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "WhatsApp's statement \u200cfollowed a repeat warning by Russia's communications regulator that it would completely block WhatsApp if it did not \u200ccomply with its demands to bring its services into line with Russian law."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/defence-electronics-firm-coreel-technologies-raises-30-million-from-valuquest-360-one-asset/articleshow/126139285.cms",
+        "title": "Defence electronics firm CoreEL Technologies raises $30 million from ValuQuest, 360 ONE Asset",
+        "link": "https://economictimes.indiatimes.com/tech/funding/defence-electronics-firm-coreel-technologies-raises-30-million-from-valuquest-360-one-asset/articleshow/126139285.cms",
+        "published": "Tue, 23 Dec 2025 15:46:42 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "CoreEL Technologies is making waves in the aerospace and defense electronics industry with a fresh $30 million funding round, led by ValueQuest. This injection of capital will not only elevate their manufacturing and R&amp;D efforts but also enable them to participate in significant defense initiatives."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/firscry-parent-brainbeess-unit-acquires-hygiene-products-maker-for-about-rs-58-cr",
+        "title": "FirsCry-parent Brainbees's unit acquires hygiene products maker KA Enterprises for about Rs 58 Cr",
+        "link": "https://yourstory.com/2025/12/firscry-parent-brainbeess-unit-acquires-hygiene-products-maker-for-about-rs-58-cr",
+        "published": "Tue, 23 Dec 2025 10:48:41 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Brainbees Solutions said its subsidiary Swara Baby Products will acquire KA Enterprises, a hygiene products manufacturer that reported Rs 84.01 crore revenue in FY25. The Rs 57.74 crore share-swap deal will give Swara Baby full ownership of the business."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/meet-the-deeptech-startup-powering-defence-disaster-and-critical-intelligence",
+        "title": "Meet the deeptech startup powering defence, disaster management, and critical intelligence",
+        "link": "https://yourstory.com/2025/12/meet-the-deeptech-startup-powering-defence-disaster-and-critical-intelligence",
+        "published": "Tue, 23 Dec 2025 10:00:14 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "From tasking 300+ satellites to serving the Army, Navy and APAC energy giants, Suhora is building a new intelligence layer for India and beyond."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/coreel-technologies-raises-30-million-series-b-funding",
+        "title": "CoreEL Technologies raises $30M in Series B funding",
+        "link": "https://yourstory.com/2025/12/coreel-technologies-raises-30-million-series-b-funding",
+        "published": "Tue, 23 Dec 2025 10:28:31 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "CoreEL said that the new capital will be deployed to scale manufacturing, deepen research and development, and support participation in large domestic and overseas programmes."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-apple-fined-italy-app-tracking/",
+        "title": "Italy Regulator Fines Apple For Shielding Users From Online Tracking: What This Means",
+        "link": "https://www.medianama.com/2025/12/223-apple-fined-italy-app-tracking/",
+        "published": "Tue, 23 Dec 2025 10:57:05 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Italy has fined Apple \u20ac98.6 million over its App Tracking Transparency policy, alleging that it abused its dominant position in the mobile app market and harmed third-party developers.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-apple-fined-italy-app-tracking/\">Italy Regulator Fines Apple For Shielding Users From Online Tracking: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
